--- a/app/style.css
+++ b/app/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 body {
-  background: #282c34;
+  background: linear-gradient(to right, #000000, #808080);
   color: #fff;
   font-family: 'Open Sans', sans-serif;
   padding: 30px;
@@ -9,37 +9,55 @@ body {
 }
 
 h1 {
-  font-weight: lighter;
+  font-size: 30px;
+  font-weight: bold;
+  letter-spacing: 5px;
+  color: #0064e7;
+  text-shadow: 2px 2px 4px #000000;
+  animation: fadeIn 2s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 p {
-  color: #999;
-  font-size: 0.8rem;
+  color: #fff;
+  font-size: 16px;
+  padding-top: 50px;
 }
 
 .btn {
   background: #0064e7;
-  border: none;
+  border-color: #000000;
   border-radius: 15px;
   padding: 10px 25px;
   color: #fff;
   font-family: inherit;
-  margin: 20px 10px;
+  margin: 40px 10px;
   text-transform: uppercase;
   outline: none;
-  transition: .2s;
   cursor: pointer;
+  box-shadow: 0 0 5px #000000, 0 0 10px #ffffff, 0 0 15px #000000;
+  transition: transform 1s ease;
+  font-size: 20px;
 }
 
 .btn:hover {
-  box-shadow: 0 0 20px rgba(0,0,0,0.2);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 
 .btn-close {
   background: rgb(161, 0, 0);
   color: #fff;
   font-weight: bold;
-  border-radius:  50%;
+  border-radius: 50%;
   border: none;
   font-size: 20px;
   position: absolute;
@@ -52,7 +70,7 @@ p {
 
 .timer {
   font-weight: bold;
-  font-size: 5rem;
+  font-size: 80px;
   animation-name: pulse;
   animation-duration: 1s;
   animation-iteration-count: infinite;
@@ -74,4 +92,3 @@ p {
     transform: scale3d(1, 1, 1);
   }
 }
-
